# real-time-anomaly-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
models/: isolation_forest_baseline_v1.joblib  lstm_autoencoder_v1.h5
notebooks/: 01_eda.ipynb  02-Baseline-Model-Training.ipynb  02_baseline_model_training.ipynb  03_advanced_model_LSTM.ipynb
src/: config.py  predict.py
src/api/: main.py
tests/: test_api.py
